# simplelte

./: .codeclimate.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  run_test.sh
CP_Util/: CMakeLists.txt
CP_Util/include/: EnumClassHash.hpp  FileHandlers.hpp  IListener.hpp  ISender.hpp  ITimer.hpp  ITimerWatcher.hpp  Logger.hpp  Message.hpp  MessageBase.hpp  MessageHandler.hpp  Singleton.hpp
CP_Util/messages/: CMakeLists.txt  MessageBase.hpp  internal.proto  lte.proto  messages.proto  nas.proto  rrc.proto  s1ap.proto  x2ap.proto
CP_Util/src/: CMakeLists.txt  FileHandlers.cpp
CP_Util/test/: MessageHandlerUT.cpp
CP_Util/ut/: MessageHandlerUT.cpp
CP_eNB/: CMakeLists.txt
CP_eNB/include/: Controller.hpp  Deserializer.hpp  FileHandlers.hpp  IClient.hpp  ICommunicationFactory.hpp  ISender.hpp  IServer.hpp  IUeManager.hpp  Listener.hpp  Message.hpp  MessageTraits.hpp  MsgTraits.hpp  SIBService.hpp  Sender.hpp  Timer.hpp  UeContext.hpp  UeFSM.hpp  UeManager.hpp  ZMQClient.hpp  ZMQCommunicationFactory.hpp  ZMQServer.hpp
CP_eNB/include/server/: Controller.hpp
CP_eNB/src/: CMakeLists.txt  Controller.cpp  Listener.cpp  ResponseConversions.cpp  SIBService.cpp  Sender.cpp  TCPServer.cpp  Timer.cpp  UeManager.cpp  ZMQClient.cpp  ZMQCommunicationFactory.cpp  ZMQServer.cpp  hwserver.cpp  main.cpp
CP_eNB/src/server/: CMakeLists.txt  Controller.cpp  hwserver.cpp  serialize.hpp
CP_eNB/src/server_client/: CMakeLists.txt
CP_eNB/ut/: CMakeLists.txt  ControllerUT.cpp  DeserializerUT.cpp  MockSender.hpp  MockServer.hpp  MockTimer.hpp  MockUeManager.hpp  SIBServiceUT.cpp  UeManagerUT.cpp
eNB/: CMakeLists.txt
eNB/include/utils/: HandlerFunction.hpp  HandlerFunctionBase.hpp  MessageHandler.hpp
eNB/src/: CMakeLists.txt  main.cpp
eNB/src/server/: CMakeLists.txt  hwserver.cpp
eNB/src/server_client/: CMakeLists.txt  hwclient.cpp  hwserver.cpp  person.proto
eNB/src/utils/: CMakeLists.txt  MessageHandler.cpp
eNB/ut/utils/: CMakeLists.txt  HandlerFunctionUT.cpp  MessageHandelerUT.cpp  MessageHandlerUT.cpp
messages/: CMakeLists.txt  messages.proto
misc/: valgrind-python.supp
src/: CMakeLists.txt
src/messages/: CMakeLists.txt  messages.pb.cc  messages.pb.h
test/acceptance_test/: fixtures.py  internal_pb2.py  lte_pb2.py  memory_leaks.py  messages_pb2.py  rrc_pb2.py  s1ap_pb2.py  test_attach.py  test_detach.py  test_dl_througput.py  test_memory_leaks.py  test_performance.py  test_sib.py  test_simple_attach.py  test_uplink.py  ue_functions.py  x2ap_pb2.py
toolset/: ATDD.sh  run_acceptance_tests.sh  run_memory_test.sh  run_test.sh  static_analysis.sh
toolset/python_virtualenv/: pip-selfcheck.json
toolset/python_virtualenv/local/: bin  include  lib
